Open links in new tab

--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -70,6 +70,7 @@
         <a href="#faq" class="nav-link">FAQ</a>
         <a
           href="https://forms.gle/B6XvxV9vfTrfMyT28"
+          target="_blank"
           class="nav-button button-secondary"
           >Apply</a
         >
@@ -95,11 +96,13 @@
         </div>
         <a
           href="https://forms.gle/B6XvxV9vfTrfMyT28"
+          target="_blank"
           class="hero-button button-main"
           >Apply Now</a
         >
         <a
           href="https://forms.gle/eoiNwnXHbGrraYjN8"
+          target="_blank"
           class="hero-button button-secondary"
           >Be a Mentor</a
         >
@@ -297,16 +300,19 @@
       <p>Get started now</p>
       <a
         href="https://forms.gle/B6XvxV9vfTrfMyT28"
+        target="_blank"
         class="hero-button button-secondary cta-button"
         >Participate</a
       >
       <a
         href="https://forms.gle/eoiNwnXHbGrraYjN8"
+        target="_blank"
         class="hero-button button-secondary cta-button"
         >Volunteer</a
       >
       <a
         href="mailto:productsprint@ubcpm.club"
+        target="_blank"
         class="hero-button button-secondary cta-button"
         >Sponsor</a
       >
