--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -81,11 +81,12 @@
       <div class="hero-content">
         <!-- background -->
         <div class="background"></div>
-        <img class="logo" src="assets/productsprint.png" />
+        <img class="logo" src="assets/productsprint.svg" />
         <!-- logo -->
         <h2>
-          <span class="line">Early Applications are&nbsp;</span
-          ><span class="line">now open</span>
+          <!-- <span class="line">2-Week Track towards&nbsp;</span -->
+          <!-- ><span class="line">Product Management</span> -->
+          2-Week Track towards Product Management
         </h2>
         <div class="hero-detail">
           <p>
@@ -115,18 +116,18 @@
         <h2>Ignite Your Future</h2>
         <p>
           In this new, 2-week competition, you steer the direction of a
-          company’s software product. You’ll be ready to take on future roles in
-          product teams.
+          company’s software product. By the end, you’ll be one step closer to
+          product management.
         </p>
       </div>
       <div class="cards">
         <div class="card">
           <img src="assets/icons/fa-cheque.svg" class="card-icon" />
-          <h3>Work on a Case to Win Prizes</h3>
+          <h3>Work on a Product to Win Prizes</h3>
           <p>
-            Teams are given the opportunity to work on real cases in hopes of
-            earning prize money. Plus, this new addition to your portfolio might
-            help you find your next internship.
+            Competing teams work on real product challenges in hopes of earning
+            prize money. Plus, this new addition to your portfolio could help
+            you find your next internship.
           </p>
         </div>
         <div class="card">
@@ -134,7 +135,7 @@
           <h3>Build with Friends</h3>
           <p>
             Beginners and experienced participants can match their skills and
-            interests to settle into roles on teams of 4. Optionally, trade
+            interests to settle into roles on teams of 3. Optionally, trade
             feedback with others in team exchanges.
           </p>
         </div>
@@ -297,7 +298,7 @@
     </div>
     <!-- CTA -->
     <div id="cta" class="cta section-secondary">
-      <p>Get started now</p>
+      <p>First round applications close Dec 29</p>
       <a
         href="https://forms.gle/B6XvxV9vfTrfMyT28"
         target="_blank"
