--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -81,7 +81,7 @@
       <div class="hero-content">
         <!-- background -->
         <div class="background"></div>
-        <img class="logo" src="assets/productsprint.svg" />
+        <img class="logo" src="assets/productsprint.png" />
         <!-- logo -->
         <h2>
           <!-- <span class="line">2-Week Track towards&nbsp;</span -->
