Updated company logos

--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -117,7 +117,7 @@
         <p>
           In this new, 2-week competition, you steer the direction of a
           company’s software product. By the end, you’ll be one step closer to
-          product management.
+          finding a role on a product team.
         </p>
       </div>
       <div class="cards">
@@ -167,15 +167,16 @@
         <img class="companies-logo" src="assets/logos/google.png" />
         <img class="companies-logo" src="assets/logos/microsoft.png" />
         <img class="companies-logo" src="assets/logos/intuit.png" />
-        <img class="companies-logo" src="assets/logos/ibm.png" />
+        <!-- <img class="companies-logo" src="assets/logos/ibm.png" /> -->
         <img class="companies-logo" src="assets/logos/hootsuite.png" />
-        <img class="companies-logo" src="assets/logos/paypal.png" />
-        <img class="companies-logo" src="assets/logos/shopify.png" />
-        <img class="companies-logo" src="assets/logos/facebook.png" />
+        <!-- <img class="companies-logo" src="assets/logos/paypal.png" /> -->
+        <!-- <img class="companies-logo" src="assets/logos/shopify.png" /> -->
+        <!-- <img class="companies-logo" src="assets/logos/facebook.png" /> -->
         <img class="companies-logo" src="assets/logos/grammarly.png" />
-        <img class="companies-logo" src="assets/logos/sap.png" />
+        <img class="companies-logo" src="assets/logos/ey.png" />
+        <!-- <img class="companies-logo" src="assets/logos/sap.png" /> -->
         <img class="companies-logo" src="assets/logos/telus.png" />
-        <img class="companies-logo" src="assets/logos/dapperlabs.png" />
+        <!-- <img class="companies-logo" src="assets/logos/dapperlabs.png" /> -->
       </div>
     </div>
 
