Tweaks to wording

--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -132,7 +132,7 @@
         </div>
         <div class="card">
           <img src="assets/icons/fa-user-friends.svg" class="card-icon" />
-          <h3>Build with Friends</h3>
+          <h3>Team up with Friends</h3>
           <p>
             Beginners and experienced participants can match their skills and
             interests to settle into roles on teams of 3. Optionally, trade
@@ -289,7 +289,7 @@
           <div class="phase-date">Phase 4: Fri, Feb 4 → Sun, Feb 6</div>
           <div class="phase-description">
             <p>
-              Summarize your findings then pitch your product in front of judges
+              Summarize your findings then pitch the product in front of judges
               at the live conference, explaining why it will achieve market
               success.
             </p>
