--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -209,8 +209,9 @@
           <div class="phase-date">Before you start</div>
           <div class="phase-description">
             <p>
-              Assemble your team before choosing from a selection of software
-              cases, then meet the mentors who will guide you along the way.
+              Assemble your team before choosing from a selection of product
+              challenges, then meet the mentors who will guide you along the
+              way.
             </p>
           </div>
         </div>
