Meta tags for SEO

--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -8,7 +8,11 @@
     <title>Product Sprint | UBC Product Management Club</title>
     <meta
       name="description"
-      content="A two-week program for aspiring product managers based at UBC Vancouver."
+      content="A two-week competition for university students who are interested in pursuing product management."
+    />
+    <meta
+      property="og:image"
+      content="https://www.ubcpm.club/productsprint/assets/banner_full.png"
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
