Updated FAQ: team formation

--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -450,7 +450,7 @@
           </div>
           <div class="card accordion">
             <div class="accordion-title">
-              <h3>How do I form a team?</h3>
+              <h3>How do I form a team or find teammates?</h3>
               <img
                 src="assets/icons/fa-chevron-down.svg"
                 class="chevron"
@@ -458,9 +458,9 @@
               />
             </div>
             <p>
-              Attendees can form teams of 3 prior to the start of the program.
-              We will provide a platform for forming teams leading up to the
-              kick-off.
+              Individuals who are accepted into the competition can form teams
+              of 3 with each other prior to the start of the program. We will
+              provide a platform for forming teams leading up to the kick-off.
             </p>
           </div>
           <div class="card accordion">
