--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -14,6 +14,10 @@
       property="og:image"
       content="https://www.ubcpm.club/productsprint/assets/banner_full.png"
     />
+    <meta
+      content="Product Sprint: 2-Week Track towards Product Management "
+      property="og:title"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
