Updated online event copy
Uncertain about hybrid aspect

--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -158,11 +158,10 @@
         </div>
         <div class="card">
           <img src="assets/icons/fa-suitcase.svg" class="card-icon" />
-          <h3>Attend the Hybrid Conference</h3>
+          <h3>Attend the Final Conference</h3>
           <p>
-            The competition will culminate with an in-person + online conference
-            on Feb 6. Travel to UBC Vancouver campus or join online to pitch
-            your product, meet recruiters, and enjoy food.
+            The competition will culminate with a hybrid, online conference
+            on Feb 6. Pitch your final product, attend recruiters' booths, and make new friends who are interested in product management.
           </p>
         </div>
       </div>
@@ -431,8 +430,7 @@
             </div>
             <p>
               We’re taking a hybrid approach, so you can attend fully online if
-              you prefer. The final conference and one or two other events will
-              have in-person aspects.
+              you prefer. The final conference on Feb. 6 is planned to have in-person aspects, but may be fully virtual depending on the constantly evolving COVID-19 situation.
             </p>
           </div>
           <div class="card accordion">
