--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -161,7 +161,7 @@
           <h3>Attend the Final Conference</h3>
           <p>
             The competition will culminate with a hybrid, online conference
-            on Feb 6. Pitch your final product, attend recruiters' booths, and make new friends who are interested in product management.
+            on Feb 6. Pitch your final product, meet companies, and make friends with others interested in product management.
           </p>
         </div>
       </div>
