Updated to second round applications
New date

--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -307,7 +307,7 @@
     </div>
     <!-- CTA -->
     <div id="cta" class="cta section-secondary">
-      <p>First round applications close Dec 29</p>
+      <p>Second round applications close Jan 10</p>
       <a
         href="https://forms.gle/B6XvxV9vfTrfMyT28"
         target="_blank"
