--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -98,7 +98,7 @@
         </h2>
         <div class="hero-detail">
           <p>
-            <span class="line">Hybrid event based in&nbsp;</span
+            <span class="line">Online event based in&nbsp;</span
             ><span class="line">Vancouver, BC</span>
           </p>
           <p>Jan 22 – Feb 6, 2022</p>
@@ -160,7 +160,7 @@
           <img src="assets/icons/fa-suitcase.svg" class="card-icon" />
           <h3>Attend the Final Conference</h3>
           <p>
-            The competition will culminate with a hybrid, online conference
+            The competition will culminate with an online conference
             on Feb 6. Pitch your final product, meet companies, and make friends with others interested in product management.
           </p>
         </div>
@@ -421,7 +421,7 @@
         <div class="cards">
           <div class="card accordion">
             <div class="accordion-title">
-              <h3>Will the events be online or in-person?</h3>
+              <h3>Are the events completely online?</h3>
               <img
                 src="assets/icons/fa-chevron-down.svg"
                 class="chevron"
@@ -429,8 +429,7 @@
               />
             </div>
             <p>
-              We’re taking a hybrid approach, so you can attend fully online if
-              you prefer. The final conference on Feb. 6 is planned to have in-person aspects, but may be fully virtual depending on the constantly evolving COVID-19 situation.
+              Due to COVID-19, Product Sprint will be fully online. However, we will be using spatial video conferencing software to bring back many of the interactions that would normally take place in a physical space. Teams may choose to meet up in-person if they wish!
             </p>
           </div>
           <div class="card accordion">
@@ -445,9 +444,7 @@
             <p>
               Each of the 4 phases contains a workshop and check-in pitch with
               mentors, plus a team exchange to trade feedback and conduct user
-              interviews with other teams. There may also be an optional
-              in-person collaboration session in the middle of the 2-week
-              sprint, plus the half-day conference at the end!
+              interviews with other teams. The 2 weeks will culminate with a mini-conference that will include the competition, networking, and exhibition of the winning teams.
             </p>
           </div>
           <div class="card accordion">
