--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -216,8 +216,8 @@
           <div class="phase-date">Before you start</div>
           <div class="phase-description">
             <p>
-              Assemble your team before choosing from a selection of product
-              challenges, then meet the mentors who will guide you along the
+              Assemble your team before being assigned a company's product
+              challenge, then meet the mentors who will guide you along the
               way.
             </p>
           </div>
