Post-competition updates

--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -143,8 +143,7 @@
           <h3>Team up with Friends</h3>
           <p>
             Beginners and experienced participants can match their skills and
-            interests to settle into roles on teams of 3. Optionally, trade
-            feedback with others in team exchanges.
+            interests to settle into roles on teams of 3. Best of all, you can join from anywhere in the world.
           </p>
         </div>
         <div class="card">
@@ -158,7 +157,7 @@
         </div>
         <div class="card">
           <img src="assets/icons/fa-suitcase.svg" class="card-icon" />
-          <h3>Attend the Final Conference</h3>
+          <h3>Attend the Final Exhibition</h3>
           <p>
             The competition will culminate with an online conference
             on Feb 6. Pitch your final product, meet companies, and make friends with others interested in product management.
@@ -307,24 +306,18 @@
     </div>
     <!-- CTA -->
     <div id="cta" class="cta section-secondary">
-      <p>Second round applications close Jan 10</p>
+      <p>The first Product Sprint concluded on February 6, 2022</p>
       <a
-        href="https://forms.gle/B6XvxV9vfTrfMyT28"
+        href="https://www.linkedin.com/company/ubc-product-management-club/"
         target="_blank"
         class="hero-button button-secondary cta-button"
-        >Participate</a
-      >
-      <a
-        href="https://forms.gle/eoiNwnXHbGrraYjN8"
-        target="_blank"
-        class="hero-button button-secondary cta-button"
-        >Volunteer</a
+        >LinkedIn</a
       >
       <a
         href="mailto:productsprint@ubcpm.club"
         target="_blank"
         class="hero-button button-secondary cta-button"
-        >Sponsor</a
+        >Email us</a
       >
     </div>
 
@@ -443,8 +436,7 @@
             </div>
             <p>
               Each of the 4 phases contains a workshop and check-in pitch with
-              mentors, plus a team exchange to trade feedback and conduct user
-              interviews with other teams. The 2 weeks will culminate with a mini-conference that will include the competition, networking, and exhibition of the winning teams.
+              mentors. The 2 weeks will culminate with a mini-conference that will include the competition, networking, and exhibition of the winning teams.
             </p>
           </div>
           <div class="card accordion">
