--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -519,7 +519,7 @@
         </div>
       </div>
       <div class="footer-right">
-        <p style="font-weight: 600">Funding Provided By</p>
+        <p style="font-weight: 600">Key Sponsors</p>
         <img class="footer-sponsor" src="assets/logos/ubc.png" />
         <img class="footer-sponsor" src="assets/logos/ams.png" />
       </div>
