--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,18 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>UBC Product Management Club</title>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-14P2BF94FZ">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-14P2BF94FZ', {
+        page_path: window.location.pathname
+      });
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
