--- a/productsprint/index.html
+++ b/productsprint/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="main.css" />
     <script>
       function onLoad() {
+        window.location.href = "https://ubcpmc.com";
         var acc = document.getElementsByClassName("accordion");
         var i;
 
@@ -143,7 +144,8 @@
           <h3>Team up with Friends</h3>
           <p>
             Beginners and experienced participants can match their skills and
-            interests to settle into roles on teams of 3. Best of all, you can join from anywhere in the world.
+            interests to settle into roles on teams of 3. Best of all, you can
+            join from anywhere in the world.
           </p>
         </div>
         <div class="card">
@@ -159,8 +161,9 @@
           <img src="assets/icons/fa-suitcase.svg" class="card-icon" />
           <h3>Attend the Final Exhibition</h3>
           <p>
-            The competition will culminate with an online conference
-            on Feb 6. Pitch your final product, meet companies, and make friends with others interested in product management.
+            The competition will culminate with an online conference on Feb 6.
+            Pitch your final product, meet companies, and make friends with
+            others interested in product management.
           </p>
         </div>
       </div>
@@ -216,8 +219,7 @@
           <div class="phase-description">
             <p>
               Assemble your team before being assigned a company's product
-              challenge, then meet the mentors who will guide you along the
-              way.
+              challenge, then meet the mentors who will guide you along the way.
             </p>
           </div>
         </div>
@@ -422,7 +424,11 @@
               />
             </div>
             <p>
-              Due to COVID-19, Product Sprint will be fully online. However, we will be using spatial video conferencing software to bring back many of the interactions that would normally take place in a physical space. Teams may choose to meet up in-person if they wish!
+              Due to COVID-19, Product Sprint will be fully online. However, we
+              will be using spatial video conferencing software to bring back
+              many of the interactions that would normally take place in a
+              physical space. Teams may choose to meet up in-person if they
+              wish!
             </p>
           </div>
           <div class="card accordion">
@@ -436,7 +442,9 @@
             </div>
             <p>
               Each of the 4 phases contains a workshop and check-in pitch with
-              mentors. The 2 weeks will culminate with a mini-conference that will include the competition, networking, and exhibition of the winning teams.
+              mentors. The 2 weeks will culminate with a mini-conference that
+              will include the competition, networking, and exhibition of the
+              winning teams.
             </p>
           </div>
           <div class="card accordion">
